# CInvest

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  SocketSender.cpp  TcpServer.cpp  candlestick.hpp  docker-compose.yml  main.cpp  read_me.txt  start_project.bat
backend/: .gitignore
backend/include/: TcpServer.hpp
backend/include/patterns/: BearishKickPattern.hpp  DarkCloudCoverPattern.hpp  InvertedHammerPattern.hpp  MarubozuPattern.hpp  ShortDayPattern.hpp
backend/metatrader/: CInvest.cpp  SendCandle.cpp
backend/src/: AppController.cpp  tcp_api.py
backend/src/utils/: HttpSender.hpp
dll/: pch.h
frontend/: .gitignore  tcp-bridge.js
frontend/trading-dashboard/: .dockerignore  package-lock.json  package.json  setup.js  tailwind.config.ts
frontend/trading-dashboard/.next/: trace
frontend/trading-dashboard/app/: layout.tsx  page.tsx
include/: AppController.hpp  Candlestick.hpp  Pattern.hpp  PatternDetector.hpp  TcpServer.hpp
include/patterns/: BearishEngulfingPattern.hpp  BearishHarami.hpp  BearishHaramiPattern.hpp  BullishEngulfingPattern.hpp  BullishHaramiPattern.hpp  BullishKickPattern.hpp  DojiPattern.hpp  HammerPattern.hpp  HangingManPattern.hpp  InvertedHammerPattern.hpp  LongDayPattern.hpp  PawnPattern.hpp  PiercingLinePattern.hpp  ShootingStarPattern.hpp  ThreeBlackCrowsPattern.hpp
include/utils/: CandleParser.hpp
metatrader/: CInvest.cpp  SendCandle.cpp
src/: AppController.cpp  Dockerfile.flask  PatternDetector.cpp  TcpServer.cpp  main.cpp  tcp_api.py
src/utils/: CandleParser.cpp  HttpSender.hpp
visual studio/: SocketSender.cpp
(+30 files in other folders)
